# poc-mcp

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
client/: main.py
gateway/: main.py
gateway/controller/v1/dto/request/: chat_request.py  llm_insert.py
gateway/controller/v1/routes/: chat.py  health.py
gateway/models/: available_llms.py
gateway/repository/: gateway.db  sqlite.py
gateway/service/llm/: llm_data.py
gateway/service/llm/providers/: base_llm_provider.py  ollama.py
gateway/service/mcp_servers/: handle_mcp_servers.py
go-gateway/: go.mod  go.sum
go-gateway/cmd/mcp/: main.go
go-gateway/internal/config/: config.go
go-gateway/internal/domain/usecase/: llm_interaction.go  mcp.go
go-gateway/internal/infrastructure/llm/: interface.go
go-gateway/internal/infrastructure/llm/ollama/: dto.go  ollama.go
go-gateway/internal/infrastructure/mcp/: interface.go
go-gateway/internal/infrastructure/mcp/mcp-go/: mcp_go.go
go-gateway/internal/webserver/rest/dto/request/: prompt.go
go-gateway/internal/webserver/rest/dto/response/: health.go
go-gateway/internal/webserver/rest/frameworks/chi/controllers/: controllers.go
go-gateway/internal/webserver/rest/frameworks/chi/controllers/v1/: controller.go  health.go  llm_interaction.go  mcp.go
go-gateway/internal/webserver/rest/frameworks/chi/http_response/json/: json.go
go-gateway/internal/webserver/rest/frameworks/chi/router/: router.go
mcp_server_weather/: Dockerfile  main.py  server.py  weather.py
(+3 files in other folders)
