[project]
name = "poc-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Macedo",email = "victormacedo996@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = ["fastmcp (>=2.2.3,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.mcp_server_weather.dependencies]
fastmcp = "^2.2.3"


[tool.poetry.group.gateway.dependencies]
fastmcp = "^2.2.3"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
requests = "^2.32.3"

